--- a/backend/PruebaTecnicaChileautos.Infrastructure/PruebaTecnicaChileautos.Infrastructure.csproj
+++ b/backend/PruebaTecnicaChileautos.Infrastructure/PruebaTecnicaChileautos.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PruebaTecnicaChileautos.Core\PruebaTecnicaChileautos.Core.csproj" />
+  </ItemGroup>
+
 </Project>
