--- a/backend/PruebaTecnicaChileautos/appsettings.json
+++ b/backend/PruebaTecnicaChileautos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RickAndMortyApi": {
+    "BaseUrl": "https://rickandmortyapi.com/api"
+  },
   "AllowedHosts": "*"
 }
