--- a/backend/PruebaTecnicaChileautos.Tests/PruebaTecnicaChileautos.Tests.csproj
+++ b/backend/PruebaTecnicaChileautos.Tests/PruebaTecnicaChileautos.Tests.csproj
@@ -1,31 +1,35 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-    <UserSecretsId>9038878a-32b8-4609-b927-51511ead3dd1</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>.</DockerfileContext>
+    <Nullable>enable</Nullable>
+
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="8.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
-    <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.1">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Core\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PruebaTecnicaChileautos.Core\PruebaTecnicaChileautos.Core.csproj" />
     <ProjectReference Include="..\PruebaTecnicaChileautos.Infrastructure\PruebaTecnicaChileautos.Infrastructure.csproj" />
+    <ProjectReference Include="..\PruebaTecnicaChileautos\PruebaTecnicaChileautos.csproj" />
   </ItemGroup>
 
 </Project>
