--- a/backend/PruebaTecnicaChileautos/PruebaTecnicaChileautos.csproj
+++ b/backend/PruebaTecnicaChileautos/PruebaTecnicaChileautos.csproj
@@ -11,6 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="8.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
